# iris

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  build.py
code/: external.cc  main.cc  shell.html
code/assets/: asset_loader.cc  asset_loader.hh  material.hh  mesh.cc  mesh.hh  model.cc  model.hh  shader.cc  shader.hh  texture.cc  texture.hh
code/base/: base.hh  debug.cc  debug.hh  filesystem.cc  filesystem.hh  filesystem_null.inl  filesystem_unix.inl  filesystem_win.inl  hash.hh  math.hh  string.cc  string.hh
code/editor/: editor_camera.cc  editor_camera.hh
code/engine/: deferred.cc  deferred.hh  engine.hh  metrics.hh
code/graphics/: defaults.hh  formats.hh  opengl.cc  opengl.hh  render.cc  render.hh  renderlist.cc  renderlist.hh
code/scene/: camera.cc  camera.hh  gameobject.cc  gameobject.hh  light.cc  light.hh  scene.cc  scene.hh
data/shaders/: core_fullscreen.vert  core_transform.vert  core_transform_min.vert  debug_albedo.frag  debug_pos_clip.frag  debugvis.frag  debugvis_depth.frag  gbuffer.frag  light_directional.frag  shadowmap.frag  taa.frag  tonemap_postfx.frag
docs/: Iris.js  Iris.wasm  index.html
